src/brew-monitor.Frontend/src/app/brew-list/brew-form/brew-form.component.scss
.container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
  background-color: white;
  border: 1px solid gray;
  border-radius: 3px;
  position: relative;
  overflow: auto;

  .header {
    display: flex;
    width: 100%;
    flex-direction: row;
    height: calc(var(--grid) * 10);
    position: sticky;
    top: 0;
    border-bottom: 1px solid gray;
    background-color: rgb(226, 222, 222);

    h1 {
      width: 100%;
      text-align: center;
      padding: calc(var(--grid) * 3) 0 calc(var(--grid) * 2)
        calc(var(--grid) * 4);
    }

    .header__x-button {
      width: calc(var(--grid) * 5);
      height: calc(var(--grid) * 4);
      text-align: center;
      position: relative;
      top: -3px;
      right: 0;
      background-color: tomato;
      border: 0.3px solid rgb(85, 85, 85);
      outline: none;
      border-radius: 0 0 0 5px;

      .material-icons {
        color: white;
        padding-top: 2px;
      }
    }

    .header__x-button:hover {
      background-color: rgb(248, 137, 117);
    }

    .header__x-button:active {
      top: -2px;
    }
  }

  .form-container {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: calc(100%);
    justify-content: center;

    .details {
      width: 100%;
      height: 100%;
      flex-grow: 1;

      h3 {
        text-align: center;
        padding: calc(var(--grid) * 4) 0;
      }

      .details__form {
        display: inline-block;
        width: 50%;
        margin-top: calc(var(--grid) * 4);

        div {
          display: flex;
          flex-direction: row;
          justify-content: center;

          label {
            display: inline-block;
            width: 300px;
          }
        }
      }
    }

    .ingredients {
      width: 100%;
      height: 50%;
      flex-grow: 1;

      h3 {
        text-align: center;
        border-top: 1px solid gray;
        padding: calc(var(--grid) * 4) 0;
      }

      .ingredients__form {
        display: inline-block;
        width: 50%;
        margin-top: calc(var(--grid) * 4);

        div {
          display: flex;
          flex-direction: row;
          justify-content: center;

          label {
            display: inline-block;
            width: 100px;
          }
        }
      }
    }

    .create-button {
      background-color: rgb(166, 240, 166);
      border: none;
      outline: none;
      height: calc(var(--grid) * 9);
      width: calc(var(--grid) * 35);
      margin: calc(var(--grid) * 6) 0 auto auto;
      font-size: 18px;
    }

    .create-button:hover {
      background-color: rgb(183, 243, 183);
    }

    .create-button:active {
      position: relative;
      top: 1px;
    }
  }
}

